syntax = "proto3";

option csharp_namespace = "IoTHub.Grpc.Protos";

package hub;

service Hub {
	rpc RegisterSensor(SensorRegisterRequest) returns (RegisterResponse);
	
	rpc RegisterSensorHost(HostRegisterRequest) returns (RegisterResponse);

	rpc PublishSensorData(PublishSensorDataRequest) returns (PublishResponse);

	rpc PublishSensorDataBulk(stream PublishSensorDataRequest) returns (PublishResponse);
}

message SensorRegisterRequest {
	string name = 1;
	string unitName = 2;
	int32 hostSensorId = 3;
	int32 hostId = 4;
}

message HostRegisterRequest {
	string name = 1;
	string networkId = 2;
}

message RegisterResponse {
	int32 id = 1;
	bool success = 2;
	string error = 3;
}

message PublishSensorDataRequest {
	int32 hostId = 1;
	int32 sensorId = 2;
	oneof data {
		int64 intData = 3;
		double doubleData = 4;
	}

	int64 timestamp = 5;
}

message PublishResponse {
	int32 messagesAccepted = 1;
}